# hedge-fund-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: hedge_funds_2025_Q4.csv
outputs/: NVDA_holders.csv
postgres/: schema.sql
src/: get_hedge_funds.py  initialize_db.py  utils.py
streamlit/: app.py
