[project]
name = "hedge-fund-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "edgartools>=5.6.4",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
